Move public to public_docs

--- a/public_docs/player_characters/generating.html
+++ b/public_docs/player_characters/generating.html
@@ -151,6 +151,7 @@
   &quot;character_name&quot;: &quot;string&quot; // optional, will be empty if not specified
 }
 </code></pre>
+<p>You can check the Open API spec for all of the options for both <code>character_size</code> and <code>character_species</code>. Neither species nor size impact gameplay at all (I am not sure if they ever will) and are just for flavour.</p>
 
                     </main>
 
