--- a/public_docs/print.html
+++ b/public_docs/print.html
@@ -186,6 +186,7 @@
   &quot;character_name&quot;: &quot;string&quot; // optional, will be empty if not specified
 }
 </code></pre>
+<p>You can check the Open API spec for all of the options for both <code>character_size</code> and <code>character_species</code>. Neither species nor size impact gameplay at all (I am not sure if they ever will) and are just for flavour.</p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="getting-and-setting-current-player-character"><a class="header" href="#getting-and-setting-current-player-character">Getting and Setting Current Player Character</a></h1>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="game"><a class="header" href="#game">Game</a></h1>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="generating"><a class="header" href="#generating">Generating</a></h1>
