--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/assets/favicon.7c2597b9.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
-    <script type="module" crossorigin src="/assets/index.ebbe2e3d.js"></script>
-    <link rel="stylesheet" href="/assets/index.db638bc5.css">
+    <title>Underworld Server</title>
+    <script type="module" crossorigin src="/assets/index.9cca723e.js"></script>
+    <link rel="stylesheet" href="/assets/index.c46993fb.css">
   </head>
   <body>
     <div id="root"></div>
