Adjust some titles and text

--- a/sign-in/index.html
+++ b/sign-in/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Log into Underworld Server</title>
+    <title>Underworld Server - Sign In</title>
     <link rel="stylesheet" href="/sign-in/style.css" />
     <script src="/sign-in/index.js"></script>
   </head>
