--- a/token/index.html
+++ b/token/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>HTML5 Login Form with validation Example</title>
+    <title>Underworld Server - API Token</title>
     <link rel="stylesheet" href="/token/style.css" />
   </head>
   <body>
