--- a/success/index.html
+++ b/success/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>HTML5 Login Form with validation Example</title>
+    <title>Underworld Server - Email Sent</title>
     <link rel="stylesheet" href="/success/style.css" />
   </head>
   <body>
@@ -10,7 +10,8 @@
     <div id="success-wrap">
       <h2>Success!</h2>
       <p>
-        An email has been sent. Click the provided link to log into the game.
+        An email has been sent. Click the provided link to log into the game. If
+        you don't see it, be sure to check your spam folder.
       </p>
       <!--create-account-wrap-->
     </div>
